@@ -48,6 +48,9 @@ class ID3JunkFrameError(error, ValueError): pass
 
 class ID3Warning(error, UserWarning): pass
 
+def is_valid_frame_id(frame_id):
+    return frame_id.isalnum() and frame_id.isupper()
+
 class ID3(mutagen.Metadata):
     """A file with an ID3v2 tag.
 
@@ -263,7 +266,7 @@ class ID3(mutagen.Metadata):
                 if size == 0: continue # drop empty frames
                 try: tag = frames[name]
                 except KeyError: 
-                    if name.isalnum(): yield header + framedata
+                    if is_valid_frame_id(name): yield header + framedata
                 else:
                     try: yield self.__load_framedata(tag, flags, framedata)
                     except NotImplementedError: yield header + framedata
@@ -281,7 +284,7 @@ class ID3(mutagen.Metadata):
                 if size == 0: continue # drop empty frames
                 try: tag = frames[name]
                 except KeyError:
-                    if name.isalnum(): yield header + framedata
+                    if is_valid_frame_id(name): yield header + framedata
                 else:
                     try: yield self.__load_framedata(tag, 0, framedata)
                     except NotImplementedError: yield header + framedata
